--- a/index.html
+++ b/index.html
@@ -34,6 +34,15 @@
 		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
 
+		<!--Promo Video-->
+		<video controls>
+			<source src="videos/real-estate.mp4" type="video/mp4">
+			<source src="videos/real-estate.ogv" type="video/ogg">
+			Your browser does not support this HTML5 video. <a href="http://browsehappy.com">Please upgrade your browser.</a>
+			
+		</video>
+
+
 	</body>
 
 </html>
